--- a/src/_data/personal.yaml
+++ b/src/_data/personal.yaml
@@ -1,11 +1,7 @@
-email: hola@eyourmail.lol
+email: me@cehwitham.com
 address: |-
-  Organization name
-  Your street
-  12345, city
-  Tel: +34 928231911
+  Chris Witham
+  Mallards Sailing Holidays
 platforms:
-  github: 'https://github.com/madrilene/eleventy-excellent'
-  mastodon: 'https://front-end.social/@lene'
-  bluesky: 'https://bsky.app/profile/lenesaile.com'
-  kofi: 'https://ko-fi.com/lenesaile'
+  github: 'https://github.com/cehwitham'
+  mastodon: 'https://mastodon.me.uk/@cehwitham'
